--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "homepage": "http://IsaacLSK.github.io/restaurant_deploy",
     "name": "server",
     "description": "Express",
-    "author": "COMPS381F student",
+    "author": "IsaacLSK",
     "version": "0.0.1",
     "dependencies": {
         "assert": "*",
@@ -28,10 +27,8 @@
     },
     "engine": "node >= 0.10.0",
     "scripts": {
-        "predeploy": "npm run start",
-        "deploy": "gh-pages -d start",
         "start": "node server",
-        "mon": "nodemon server"
+        "startmon": "nodemon server"
     },
     "devDependencies": {
         "gh-pages": "^3.2.2"
