--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
         "fs": "*",
         "mongodb": "3.1",
         "mongoose": "^5.11.7",
-        "nodemon": "^2.0.7",
-        "passport": "^0.4.1",
-        "passport-http": "^0.3.0",
-        "passport-local": "^1.0.0"
+        "nodemon": "^2.0.7"
     },
     "engine": "node >= 0.10.0",
     "scripts": {
